MODINREACH-336 fix more code smells