@@ -7,7 +7,6 @@ import jakarta.persistence.EntityExistsException;
 import java.util.Comparator;
 import java.util.List;
 import java.util.UUID;
-import java.util.stream.Collectors;
 
 import lombok.RequiredArgsConstructor;
 import org.springframework.stereotype.Service;
@@ -92,7 +91,7 @@ public class MARCTransformationOptionsSettingsServiceImpl implements MARCTransfo
     return repository.findAll(new OffsetRequest(offset, limit))
       .stream()
       .map(mapper::toDto)
-      .collect(Collectors.toList());
+      .toList();
   }
 
   private void updateMARCTransformOptSet(MARCTransformationOptionsSettings marcTransformOptSet, MARCTransformationOptionsSettings updated) {
